# STM32_Drone_Project_DC

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/drone-hal/: Cargo.toml
crates/drone-hal/src/: lib.rs  motor.rs
crates/drone-protocol/: Cargo.toml
crates/drone-protocol/src/: lib.rs
docs/: architecture.md  hardware.md  protocol.md
firmware/flight_controller/: Cargo.toml
firmware/flight_controller/src/: board.rs  main.rs
firmware/remote/: Cargo.toml
firmware/remote/src/: main.rs
